[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "venny4py"
version = "0.1.1"

description = "venn4py"
readme = "README.md"
requires-python = ">=3.7"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.0"


[tool.poetry.classifiers]
programming-language = "Python :: 3"
license = "OSI Approved :: MIT License"
operating-system = "OS Independent"
